Fix project borders in dark mode

--- a/public/main.css
+++ b/public/main.css
@@ -107,6 +107,11 @@ body {
         background-color: rgb(20, 20, 20);
         color: white;
     }
+
+    .proj-item {
+      border-color: white;
+      border-style: solid;
+    }
 }
 
 /* Projects grid layout */
